better late than never

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-The Bean Truck!
+<!DOCTYPE html>
+  <html>
+  <head>
+  <title>Menu</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-Beans are good food!
+<div class="hometitle">
+<h1> THE BEAN TRUCK </h1>
+<h2> Beans are good food! </h2>
+<h2> The bean truck serves affordable and tasty meals based on that humble but delicious ingredient: legumes. </h2>
+</div>
 
-The bean truck serves affordable and tasty meals based on that humble but delicious ingredient: legumes.
-
-*Our Story
-*Menu
-*Upcoming Events 
+<div class="nav">
+<ul class="navlist">
+<li class="navlist-item"><a href="menu.html"> Menu </a></li>
+<li class="navlist-item"><a href="our_story.html"> Our Story </a></li>
+<li class="navlist-item"><a href="upcoming_events.html"> Upcoming Events </a></li>
+</ul>
+</div>
+</div>
