--- a/upcoming_events.html
+++ b/upcoming_events.html
@@ -1,9 +1,25 @@
-Look for the bean truck at the following upcoming events:
+<!DOCTYPE html>
+  <html>
+  <head>
+  <title>Upcoming Events</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<h3> Look for the bean truck at the following upcoming events: </h3>
 
-* September 26-27: World Meeting of Families (where we will serve our special papal bean and pasta soup Papa e f
-Fagioli)
-* October 2-4: Manayunk Food Truck Festival
-* October 7: Gurrellia Food Truck Wednesday at Drexel
-* October 9-10: Fairmount Park Truck Meet
-* October 17: Conshohocken Brewery Food Truck Night
-* October 31: Spooky Food Truck Halloween 
+<div class="eventtext">
+<p><strong> September 26-27: </strong> World Meeting of Families (where we will serve our special papal bean and pasta soup Papa e f
+Fagioli) </p>
+<p><strong> October 2-4:</strong> Manayunk Food Truck Festival</p>
+<p><strong> October 7: </strong>Gurrellia Food Truck Wednesday at Drexel</p>
+<p><strong> October 9-10: </strong>Fairmount Park Truck Meet </p>
+<p><strong>October 17: </strong>Conshohocken Brewery Food Truck Night</p>
+<p><strong>October 31: </strong> Spooky Food Truck Halloween </p>
+</div>
+
+<div class="eventphoto">
+  <img src="Images/hummus.jpg">
+</div>
+</body>
+</head>
