--- a/menu.html
+++ b/menu.html
@@ -1,29 +1,57 @@
-Menu
+<!DOCTYPE html>
+  <html>
+  <head>
+  <title>Menu</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-Appetizers
+<h2> Menu </h2>
+<div class="bigmenubox">
+<div class="menubox">
+<h3> Appetizers </h3>
 
-Farinata: A light, crispy pancake made of chickpea flour and seasoned with rosemary and black pepper.
+<p> Farinata: A light, crispy pancake made of chickpea flour and seasoned with rosemary and black pepper.</p>
 
-Hummus: The classic chickpea dip. Ours has sriacha and lots of lemon. Served with pita and oil-cured black olives.
+<p> Hummus: The classic chickpea dip. Ours has sriacha and lots of lemon. Served with pita and oil-cured black olives. </p>
 
-White Bean Dip: Creamy cannelini beans mashed with olive oil, oregano, and lots of black pepper. Served with crostini and piave cheese
+<p> White Bean Dip: Creamy cannelini beans mashed with olive oil, oregano, and lots of black pepper. Served with crostini and piave cheese </p>
+</div>
 
-Soups
+<div class="menubox">
+<h3> Soups </h3>
 
-Tuscan Bean: White bean soup with kale, sausage and pancetta.
+<p> Tuscan Bean: White bean soup with kale, sausage and pancetta. </p>
 
-Cuban Black Bean: Spicy black bean soup with lime and cilantro.
+<p> Cuban Black Bean: Spicy black bean soup with lime and cilantro. </p>
 
-Red Lentil Dal: Indian red lentil soup seasoned with curry. Served with flakey paratha bread.
+<p> Red Lentil Dal: Indian red lentil soup seasoned with curry. Served with flakey paratha bread. </p>
+</div>
 
-Sandwiches
+<div class="menubox"
+<h3> Sandwiches </h3>
 
-Falafel: The classic. Deep fried and crispy, loaded with cumin.
+<p> Falafel: The classic. Deep fried and crispy, loaded with cumin. </p>
 
-White Bean Cake: White beans with rosemary, crisp on the outside and creamy in the middle. Served with house pickles.
+<p> White Bean Cake: White beans with rosemary, crisp on the outside and creamy in the middle. Served with house pickles. </p>
+</div>
 
-Beans 'n Rice
+<div class="menubox">
+<h3> Beans 'n Rice </h3>
 
-Beer glazed black beans: black beans Simmered in Flying Fish Oyster Stout, these spicy black beans are earthy and slightly sweet. Served with cornbread.
+<p> Beer glazed black beans: black beans Simmered in Flying Fish Oyster Stout, these spicy black beans are earthy and slightly sweet. Served with cornbread.</p>
 
-Red beans and rice: The New Orleans classic, cooked with pickled pork and creole spices.
+<p> Red beans and rice: The New Orleans classic, cooked with pickled pork and creole spices. </p>
+</div>
+</div>
+
+<div class="menuphoto">
+<img src="Images/Red_Beans_and_Rice.jpg">
+</div>
+
+
+
+
+</body>
+</html>
